5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1758_1577.log
== TEST (2019-05-23 10:34:39) 
-- CODE:
from numpy import *
a = float(input("a; "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n - 1
d(t) = ((a * t(**2))/2) + vo * t 
a = arange(t)
while(t < n):
	d(t) = ((a * t(**2))/2) + vo * t
	t = n - 1
print(zeros(d))
-- ERROR:
File "XXXX", line 6
    d(t) = ((a * t(**2))/2) + vo * t 
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:35:03) 
-- CODE:
from numpy import *
a = float(input("a; "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n - 1
dt = ((a * t(**2))/2) + vo * t 
a = arange(t)
while(t < n):
	dt = ((a * t(**2))/2) + vo * t
	t = n - 1
print(zeros(d))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:35:13) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n - 1
dt = ((a * t(**2))/2) + vo * t 
a = arange(t)
while(t < n):
	dt = ((a * t(**2))/2) + vo * t
	t = n - 1
print(zeros(d))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:35:37) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n - 1
dt = ((a * (t**2))/2) + vo * t 
a = arange(t)
while(t < n):
	dt = ((a * t(**2))/2) + vo * t
	t = n - 1
print(zeros(d))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:35:58) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n - 1
a = arange(t)
while(t < n):
	dt = ((a * t(**2))/2) + vo * t
	t = n - 1
print(zeros(d))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:36:25) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n - 1
a = arange(t)
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
print(zeros(d))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:36:47) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n - 1
a = arange(t)
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	print(zeros(d))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:37:07) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n - 1
a = arange(t)
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	print(zeros(dt))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:38:37) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n - 1
a = arange(t)
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	r = zeros(dt)
	print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:39:45) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
a = arange(t)
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	r = zeros(dt)
	print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:40:01) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	r = zeros(dt)
	print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:40:21) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n -1
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	r = zeros(dt)
	print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:41:01) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n -1
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	r = float(zeros(dt))
	print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:41:35) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n -1
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	print(zeros[dt])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:42:41) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n -1
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:43:48) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n -1
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
print(dt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:44:11) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n -1
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:44:25) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n -1
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:44:30) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n -1
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:44:35) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n -1
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:46:57) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n -1
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	z = zeros(dt)
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:52:05) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n - 1
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	z = zeros(dt)
	print(dt[z])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:53:00) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n - 1
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	z = zeros(t)
	print(dt[z])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:53:15) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n - 1
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	z = zeros(t)
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:55:17) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n - 1
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	z = zeros(t)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:55:40) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n - 1
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	z = zeros(dt)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:55:53) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n - 1
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	z = zeros(dt)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:55:58) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n - 1
while(t < n):
	dt = ((a * (t ** 2))/2) + vo * t
	t = n - 1
	z = zeros(dt)
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:43:08) 
-- CODE:
from numpy import *
a = float(input("a: "))
vo = float(input("vo: "))
n = int(input("n: "))
t = n - 1
i = 0
t = arange(n)
d = zeros(n)
while(i<size(t)):
	d[i] = ((a * (t[i] ** 2))/2) + vo * t[i]
	i = i + 1
print(d)
-- EXECUTION TIME:
0.450464
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
